fix: link rocketseat :rocket:

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <a
             class="button button-rocketseat"
             target="_blank"
-            href="app.rocketseat.com.br/me/birobirobiro"
+            href="https://app.rocketseat.com.br/me/birobirobiro"
             ><img class="icon" src="icons/rocketseat.svg" />Rocketseat</a
           >
           <br />
