Ajust somethings :art:

--- a/index.html
+++ b/index.html
@@ -134,14 +134,12 @@
     <script src="./scripts/consoleimg.min.js"></script>
 
     <script>
+      consoleimg.load("./images/rocket.png");
       if( typeof console === 'object' ) {
         console.log(
-            'Boost Yourself'
+            '         ..::Boost Yourself::..'
         );
     }
-
-      consoleimg.load("./images/rocket.png");
-      console.log();
     </script>
 
     <!-- End Document
