:bug: Fix link Discord

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <a
             class="button button-discord"
             target="_blank"
-            href="https://discord.gg/qjppqA6"
+            href="https://discord.gg/JxuyYyaEUS"
             ><img class="icon" src="icons/discord.svg" />Discord</a
           >
           <br />
