:boom: Alterando o footer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <footer>
             <p>
               Community Experience
-              <a href="https://rocketseat.com.br">@Rocketseat</a> 🚀
+              <a target="_blank" href="https://rocketseat.com.br">@Rocketseat</a> 🚀
             </p>
           </footer>
         </div>
