:sparkles: Google Analytics & Google Adsense

--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="images/avatar.png" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics 
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-M2GTM67Z2G"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-M2GTM67Z2G");
+    </script>
+
+    <!-- Google Adsense 
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Primary Page Layout
@@ -124,7 +148,10 @@
           <footer>
             <p>
               Community Experience
-              <a target="_blank" href="https://rocketseat.com.br">@Rocketseat</a> 🚀
+              <a target="_blank" href="https://rocketseat.com.br"
+                >@Rocketseat</a
+              >
+              🚀
             </p>
           </footer>
         </div>
@@ -135,11 +162,9 @@
 
     <script>
       consoleimg.load("./images/rocket.png");
-      if( typeof console === 'object' ) {
-        console.log(
-            '         ..::Boost Yourself::..'
-        );
-    }
+      if (typeof console === "object") {
+        console.log("         ..::Boost Yourself::..");
+      }
     </script>
 
     <!-- End Document
