:rocket: Add Open Graph and GIF

--- a/index.html
+++ b/index.html
@@ -12,6 +12,37 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Open Graph
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+    <!-- HTML Meta Tags -->
+    <title>birobirobiro | Social</title>
+    <meta
+      name="description"
+      content="👋 Me chamo João, mas pode me chamar de Biro"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://birobirobiro.dev" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="birobirobiro | Social" />
+    <meta
+      property="og:description"
+      content="👋 Me chamo João, mas pode me chamar de Biro"
+    />
+    <meta property="og:image" content="./.github/cover.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="birobirobiro.dev" />
+    <meta property="twitter:url" content="https://birobirobiro.dev" />
+    <meta name="twitter:title" content="birobirobiro | Social" />
+    <meta
+      name="twitter:description"
+      content="👋 Me chamo João, mas pode me chamar de Biro"
+    />
+    <meta name="twitter:image" content="./.github/cover.png" />
+
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link
@@ -63,9 +94,12 @@
           <img id="photo" src="images/photo.jpeg" />
 
           <!-- Short Bio -->
-          <p>
-            Me chamo <i>João Inácio</i>, mas pode me chamar de
-            <strong>Biro</strong>.
+          <p class="profile-description">
+            <img src="./.github/hello.gif" alt="Hello">
+            <span>
+              Me chamo <i>João Inácio</i>, mas pode me chamar de
+              <strong>Biro</strong>.
+            </span>
           </p>
 
           <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
