:rocket: Add Open Graph and GIF

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       property="og:description"
       content="👋 Me chamo João, mas pode me chamar de Biro"
     />
-    <meta property="og:image" content="./.github/cover.png" />
+    <meta property="og:image" content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -41,7 +41,7 @@
       name="twitter:description"
       content="👋 Me chamo João, mas pode me chamar de Biro"
     />
-    <meta name="twitter:image" content="./.github/cover.png" />
+    <meta name="twitter:image" content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true" />
 
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
