:fire: Remove img/message console

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
       crossorigin="anonymous"
     ></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Primary Page Layout
@@ -191,15 +194,6 @@
         </div>
       </div>
     </div>
-
-    <script src="./scripts/consoleimg.min.js"></script>
-
-    <script>
-      consoleimg.load("./images/rocket.png");
-      if (typeof console === "object") {
-        console.log("         ..::Boost Yourself::..");
-      }
-    </script>
 
     <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
