Botão de compra Mercado Livre e OLX

--- a/index.html
+++ b/index.html
@@ -97,14 +97,32 @@
 
           <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
-          <!-- Github -->
+          <!-- PC Mercado Livre -->
           <a
-            class="button button-github"
+            class="button button-mercado-livre"
             target="_blank"
-            href="https://github.com/birobirobiro"
-            ><img class="icon" src="icons/github.svg" />Github</a
+            href="https://produto.mercadolivre.com.br/MLB-1944254678-pc-computador-gamer-completo-core-i7-32gb-placa-de-video-8gb-_JM"
+            ><img class="icon" src="icons/market-ml.svg" />PC - Mercado Livre</a
           >
           <br />
+
+           <!-- PC OLX -->
+           <a
+           class="button button-olx"
+           target="_blank"
+           href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-intel-core-i7-32gb-ram-ddr4-placa-de-video-rx590-8gb-ssd-m2-256gb-906771518"
+           ><img class="icon" src="icons/market-olx.svg" />PC - OLX</a
+         >
+         <br />
+
+           <!-- Github -->
+           <a
+           class="button button-github"
+           target="_blank"
+           href="https://github.com/birobirobiro"
+           ><img class="icon" src="icons/github.svg" />Github</a
+         >
+         <br />
 
           <!-- Twitter -->
           <!-- <a
