Botão Enjoei adicionado

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       property="og:description"
       content="👋 Me chamo João, mas pode me chamar de Biro"
     />
-    <meta property="og:image" content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true" />
+    <meta
+      property="og:image"
+      content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true"
+    />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -41,7 +44,10 @@
       name="twitter:description"
       content="👋 Me chamo João, mas pode me chamar de Biro"
     />
-    <meta name="twitter:image" content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true" />
+    <meta
+      name="twitter:image"
+      content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true"
+    />
 
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -75,7 +81,6 @@
 
       gtag("config", "G-M2GTM67Z2G");
     </script>
-    
   </head>
   <body>
     <!-- Primary Page Layout
@@ -88,7 +93,7 @@
 
           <!-- Short Bio -->
           <p class="profile-description">
-            <img src="./.github/hello.gif" alt="Hello">
+            <img src="./.github/hello.gif" alt="Hello" />
             <span>
               Me chamo <i>João Inácio</i>, mas pode me chamar de
               <strong>Biro</strong>.
@@ -96,6 +101,24 @@
           </p>
 
           <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
+
+          <!-- PC OLX -->
+          <a
+            class="button button-olx"
+            target="_blank"
+            href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-intel-core-i7-32gb-ram-ddr4-placa-de-video-rx590-8gb-ssd-m2-256gb-906771518"
+            ><img class="icon" src="icons/market-olx.svg" />PC - OLX</a
+          >
+          <br />
+
+          <!-- PC Enjoei -->
+          <a
+            class="button button-enjoei"
+            target="_blank"
+            href="https://www.enjoei.com.br/p/pc-gamer-core-i7-32gb-ddr4-rx-590-8gb-ssd-m2-256gb-58044944"
+            ><img class="icon" src="icons/market-olx.svg" />PC - Enjoei</a
+          >
+          <br />
 
           <!-- PC Mercado Livre -->
           <a
@@ -106,23 +129,14 @@
           >
           <br />
 
-           <!-- PC OLX -->
-           <a
-           class="button button-olx"
-           target="_blank"
-           href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-intel-core-i7-32gb-ram-ddr4-placa-de-video-rx590-8gb-ssd-m2-256gb-906771518"
-           ><img class="icon" src="icons/market-olx.svg" />PC - OLX</a
-         >
-         <br />
-
-           <!-- Github -->
-           <a
-           class="button button-github"
-           target="_blank"
-           href="https://github.com/birobirobiro"
-           ><img class="icon" src="icons/github.svg" />Github</a
-         >
-         <br />
+          <!-- Github -->
+          <a
+            class="button button-github"
+            target="_blank"
+            href="https://github.com/birobirobiro"
+            ><img class="icon" src="icons/github.svg" />Github</a
+          >
+          <br />
 
           <!-- Twitter -->
           <!-- <a
