--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <a
             class="button button-olx"
             target="_blank"
-            href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-intel-core-i7-32gb-ram-ddr4-placa-de-video-rx590-8gb-ssd-m2-256gb-906771518"
+            href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-core-i7-9-geracao-32gb-ddr4-rx-590-8gb-ssd-m2-256gb-ssd-240gb-921272965"
             ><img class="icon" src="icons/market-olx.svg" />PC - OLX</a
           >
           <br />
@@ -115,7 +115,7 @@
           <a
             class="button button-enjoei"
             target="_blank"
-            href="https://www.enjoei.com.br/p/pc-gamer-core-i7-32gb-ddr4-rx-590-8gb-ssd-m2-256gb-58044944"
+            href="https://www.enjoei.com.br/p/pc-computador-gamer-completo-core-i7-32gb-placa-de-video-8gb-59658021?rsid=41783862-d101-40bb-a041-ae5e6d7c6757-1629576843269&rsp=1&rspix=1"
             ><img class="icon" src="icons/market-olx.svg" />PC - Enjoei</a
           >
           <br />
@@ -124,7 +124,7 @@
           <a
             class="button button-mercado-livre"
             target="_blank"
-            href="https://produto.mercadolivre.com.br/MLB-1944254678-pc-computador-gamer-completo-core-i7-32gb-placa-de-video-8gb-_JM"
+            href="https://produto.mercadolivre.com.br/MLB-1987854696-pc-gamer-core-i7-32gb-ddr4-rx-590-8gb-ssd-m2-256gb-ssd-240gb-_JM"
             ><img class="icon" src="icons/market-ml.svg" />PC - Mercado Livre</a
           >
           <br />
