Update OLX link

--- a/index.html
+++ b/index.html
@@ -1,145 +1,115 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-  <head>
-    <!-- Page Information
+
+<head>
+  <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta charset="utf-8" />
-    <title>birobirobiro | Social</title>
-    <meta name="description" content="birobirobiro" />
-    <meta name="author" content="" />
+  <meta charset="utf-8" />
+  <title>birobirobiro | Social</title>
+  <meta name="description" content="birobirobiro" />
+  <meta name="author" content="" />
 
-    <!-- Mobile Specific Metas
+  <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Open Graph
+  <!-- Open Graph
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <!-- HTML Meta Tags -->
-    <title>birobirobiro | Social</title>
-    <meta
-      name="description"
-      content="👋 Me chamo João, mas pode me chamar de Biro"
-    />
+  <!-- HTML Meta Tags -->
+  <title>birobirobiro | Social</title>
+  <meta name="description" content="👋 Me chamo João, mas pode me chamar de Biro" />
 
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://birobirobiro.dev" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="birobirobiro | Social" />
-    <meta
-      property="og:description"
-      content="👋 Me chamo João, mas pode me chamar de Biro"
-    />
-    <meta
-      property="og:image"
-      content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true"
-    />
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://birobirobiro.dev" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="birobirobiro | Social" />
+  <meta property="og:description" content="👋 Me chamo João, mas pode me chamar de Biro" />
+  <meta property="og:image"
+    content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true" />
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="birobirobiro.dev" />
-    <meta property="twitter:url" content="https://birobirobiro.dev" />
-    <meta name="twitter:title" content="birobirobiro | Social" />
-    <meta
-      name="twitter:description"
-      content="👋 Me chamo João, mas pode me chamar de Biro"
-    />
-    <meta
-      name="twitter:image"
-      content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true"
-    />
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="twitter:domain" content="birobirobiro.dev" />
+  <meta property="twitter:url" content="https://birobirobiro.dev" />
+  <meta name="twitter:title" content="birobirobiro | Social" />
+  <meta name="twitter:description" content="👋 Me chamo João, mas pode me chamar de Biro" />
+  <meta name="twitter:image"
+    content="https://github.com/birobirobiro/birobirobiro-links/blob/main/.github/cover.png?raw=true" />
 
-    <!-- FONT
+  <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet" />
 
-    <!-- CSS
+  <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/skeleton-dark.css" />
-    <link rel="stylesheet" href="css/brands.css" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/skeleton-dark.css" />
+  <link rel="stylesheet" href="css/brands.css" />
 
-    <!-- Favicon
+  <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/avatar.png" />
+  <link rel="icon" type="image/png" href="images/avatar.png" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics 
+  <!-- Global site tag (gtag.js) - Google Analytics 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-M2GTM67Z2G"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M2GTM67Z2G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-      gtag("config", "G-M2GTM67Z2G");
-    </script>
-  </head>
-  <body>
-    <!-- Primary Page Layout
+    gtag("config", "G-M2GTM67Z2G");
+  </script>
+</head>
+
+<body>
+  <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="container">
-      <div class="row">
-        <div class="column">
-          <!-- Your Image Here -->
-          <img id="photo" src="images/photo.jpeg" />
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <!-- Your Image Here -->
+        <img id="photo" src="images/photo.jpeg" />
 
-          <!-- Short Bio -->
-          <p class="profile-description">
-            <img src="./.github/hello.gif" alt="Hello" />
-            <span>
-              Me chamo <i>João Inácio</i>, mas pode me chamar de
-              <strong>Biro</strong>.
-            </span>
-          </p>
+        <!-- Short Bio -->
+        <p class="profile-description">
+          <img src="./.github/hello.gif" alt="Hello" />
+          <span>
+            Me chamo <i>João Inácio</i>, mas pode me chamar de
+            <strong>Biro</strong>.
+          </span>
+        </p>
 
-          <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
+        <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
-          <!-- PC OLX -->
-          <a
-            class="button button-olx"
-            target="_blank"
-            href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-core-i7-9-geracao-32gb-ddr4-rx-590-8gb-ssd-m2-256gb-ssd-240gb-921272965"
-            ><img class="icon" src="icons/market-olx.svg" />PC - OLX</a
-          >
-          <br />
+        <!-- PC OLX -->
+        <a class="button button-olx" target="_blank"
+          href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-core-i7-32gb-ddr4-rx-590-8gb-ssd-m2-240gb-934252438"><img
+            class="icon" src="icons/market-olx.svg" />PC - OLX</a>
+        <br />
 
-          <!-- PC Enjoei -->
-          <a
-            class="button button-enjoei"
-            target="_blank"
-            href="https://www.enjoei.com.br/p/pc-computador-gamer-completo-core-i7-32gb-placa-de-video-8gb-59658021?rsid=41783862-d101-40bb-a041-ae5e6d7c6757-1629576843269&rsp=1&rspix=1"
-            ><img class="icon" src="icons/market-olx.svg" />PC - Enjoei</a
-          >
-          <br />
+        <!-- PC Enjoei -->
+        <a class="button button-enjoei" target="_blank"
+          href="https://www.enjoei.com.br/p/pc-computador-gamer-completo-core-i7-32gb-placa-de-video-8gb-59658021?rsid=41783862-d101-40bb-a041-ae5e6d7c6757-1629576843269&rsp=1&rspix=1"><img
+            class="icon" src="icons/market-olx.svg" />PC - Enjoei</a>
+        <br />
 
-          <!-- PC Mercado Livre -->
-          <a
-            class="button button-mercado-livre"
-            target="_blank"
-            href="https://produto.mercadolivre.com.br/MLB-1987854696-pc-gamer-core-i7-32gb-ddr4-rx-590-8gb-ssd-m2-256gb-ssd-240gb-_JM"
-            ><img class="icon" src="icons/market-ml.svg" />PC - Mercado Livre</a
-          >
-          <br />
+        <!-- PC Mercado Livre -->
+        <a class="button button-mercado-livre" target="_blank"
+          href="https://produto.mercadolivre.com.br/MLB-1987854696-pc-gamer-core-i7-32gb-ddr4-rx-590-8gb-ssd-m2-256gb-ssd-240gb-_JM"><img
+            class="icon" src="icons/market-ml.svg" />PC - Mercado Livre</a>
+        <br />
 
-          <!-- Github -->
-          <a
-            class="button button-github"
-            target="_blank"
-            href="https://github.com/birobirobiro"
-            ><img class="icon" src="icons/github.svg" />Github</a
-          >
-          <br />
+        <!-- Github -->
+        <a class="button button-github" target="_blank" href="https://github.com/birobirobiro"><img class="icon"
+            src="icons/github.svg" />Github</a>
+        <br />
 
-          <!-- Twitter -->
-          <!-- <a
+        <!-- Twitter -->
+        <!-- <a
             class="button button-twitter"
             target="_blank"
             href="https://twitter.com/birobirobiro_/"
@@ -147,77 +117,52 @@
           >
           <br /> -->
 
-          <!-- Instagram -->
-          <a
-            class="button button-instagram"
-            target="_blank"
-            href="https://www.instagram.com/birobirobiro/"
-            ><img class="icon" src="icons/instagram.svg" />Instagram</a
-          >
-          <br />
+        <!-- Instagram -->
+        <a class="button button-instagram" target="_blank" href="https://www.instagram.com/birobirobiro/"><img
+            class="icon" src="icons/instagram.svg" />Instagram</a>
+        <br />
 
-          <!-- LinkedIn -->
-          <a
-            class="button button-linkedin"
-            target="_blank"
-            href="https://www.linkedin.com/in/joaoinacioneto/"
-            ><img class="icon" src="icons/linkedin.svg" />LinkedIn</a
-          >
-          <br />
+        <!-- LinkedIn -->
+        <a class="button button-linkedin" target="_blank" href="https://www.linkedin.com/in/joaoinacioneto/"><img
+            class="icon" src="icons/linkedin.svg" />LinkedIn</a>
+        <br />
 
-          <!-- Rocketseat -->
-          <a
-            class="button button-rocketseat"
-            target="_blank"
-            href="https://app.rocketseat.com.br/me/birobirobiro"
-            ><img class="icon" src="icons/rocketseat.svg" />Rocketseat</a
-          >
-          <br />
+        <!-- Rocketseat -->
+        <a class="button button-rocketseat" target="_blank" href="https://app.rocketseat.com.br/me/birobirobiro"><img
+            class="icon" src="icons/rocketseat.svg" />Rocketseat</a>
+        <br />
 
-          <!-- YouTube -->
-          <a
-            class="button button-youtube"
-            target="_blank"
-            href="https://www.youtube.com/birobirobiro"
-            ><img class="icon" src="icons/youtube.svg" />YouTube</a
-          >
-          <br />
+        <!-- YouTube -->
+        <a class="button button-youtube" target="_blank" href="https://www.youtube.com/birobirobiro"><img class="icon"
+            src="icons/youtube.svg" />YouTube</a>
+        <br />
 
-          <!-- Discord -->
-          <a
-            class="button button-discord"
-            target="_blank"
-            href="https://discord.gg/JxuyYyaEUS"
-            ><img class="icon" src="icons/discord.svg" />Discord</a
-          >
-          <br />
+        <!-- Discord -->
+        <a class="button button-discord" target="_blank" href="https://discord.gg/JxuyYyaEUS"><img class="icon"
+            src="icons/discord.svg" />Discord</a>
+        <br />
 
-          <!-- Twitch -->
-          <a
-            class="button button-twitch"
-            target="_blank"
-            href="https://www.twitch.tv/birobirobiro"
-            ><img class="icon" src="icons/twitch.svg" />Twitch</a
-          >
-          <br />
+        <!-- Twitch -->
+        <a class="button button-twitch" target="_blank" href="https://www.twitch.tv/birobirobiro"><img class="icon"
+            src="icons/twitch.svg" />Twitch</a>
+        <br />
 
-          <br />
-          <!-- <p>Build your own by forking <a href="https://littlelink.io">LittleLink</a>.</p> -->
+        <br />
+        <!-- <p>Build your own by forking <a href="https://littlelink.io">LittleLink</a>.</p> -->
 
-          <footer>
-            <p>
-              Community Experience
-              <a target="_blank" href="https://rocketseat.com.br"
-                >@Rocketseat</a
-              >
-              🚀
-            </p>
-          </footer>
-        </div>
+        <footer>
+          <p>
+            Community Experience
+            <a target="_blank" href="https://rocketseat.com.br">@Rocketseat</a>
+            🚀
+          </p>
+        </footer>
       </div>
     </div>
+  </div>
 
-    <!-- End Document
+  <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  </body>
+</body>
+
 </html>
