--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-BR">
 
 <head>
   <!-- Page Information
@@ -49,7 +49,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/avatar.png" />
+  <link rel="icon" type="image/png" href="images/favicon.png" />
 
   <!-- Global site tag (gtag.js) - Google Analytics 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="column">
         <!-- Your Image Here -->
-        <img id="photo" src="images/photo.jpeg" />
+        <img id="photo" src="images/avatar.jpeg" alt="avatar" />
 
         <!-- Short Bio -->
         <p class="profile-description">
