Add DoWhile2021 Button

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
 
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
+        <a class="button button-dowhile-2021" target="_blank"
+        href="https://bit.ly/dowhilebiro
+        "><img
+          class="icon-do-while-2021" src="icons/dowhile.svg" /></a>
+        <br />
+
         <!-- PC OLX -->
         <a class="button button-olx" target="_blank"
           href="https://sp.olx.com.br/regiao-de-sao-jose-do-rio-preto/computadores-e-acessorios/pc-gamer-core-i7-32gb-ddr4-rx-590-8gb-ssd-m2-240gb-934252438"><img
