--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
         <a class="button button-dowhile-2021" target="_blank"
-        href="https://bit.ly/dowhilebiro
-        "><img
+        href="https://dowhile.io/convite/birobirobiro"><img
           class="icon-do-while-2021" src="icons/dowhile.svg" /></a>
         <br />
 
