--- a/index.html
+++ b/index.html
@@ -85,8 +85,14 @@
 
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
+        <!-- DoWhile -->
         <a class="button button-dowhile-2021" target="_blank" href="https://dowhile.io/convite/birobirobiro">
           <img class="icon-do-while-2021" src="icons/dowhile.svg" /></a>
+        <br />
+
+        <!-- NLW Heat -->
+        <a class="button button-nlw-heat" target="_blank" href="https://nextlevelweek.com/convite/birobirobiro/7">
+          <img class="icon-nlw-heat" src="icons/nlw.svg" /></a>
         <br />
 
         <!-- Github -->
