Removendo botão da NLW Heat

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <p class="profile-description">
           <img src="./.github/hello.gif" alt="Hello" />
           <span>
-            Me chamo <i>João Inácio</i>, mas pode me chamar de
-            <strong>Biro</strong>.
+            Me chamo <strong><i>João</i></strong>, mas pode me chamar de
+            <strong><i>Biro</i></strong>.
           </span>
         </p>
 
@@ -88,11 +88,6 @@
         <!-- DoWhile -->
         <a class="button button-dowhile-2021" target="_blank" href="https://dowhile.io/convite/birobirobiro">
           <img class="icon-do-while-2021" src="icons/dowhile.svg" /></a>
-        <br />
-
-        <!-- NLW Heat -->
-        <a class="button button-nlw-heat" target="_blank" href="https://nextlevelweek.com/convite/birobirobiro/7">
-          <img class="icon-nlw-heat" src="icons/nlw.svg" /></a>
         <br />
 
         <!-- Github -->
