--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <br />
 
         <!-- LinkedIn -->
-        <a class="button button-linkedin" target="_blank" href="https://www.linkedin.com/in/joaoinacioneto/"><img
+        <a class="button button-linkedin" target="_blank" href="https://www.linkedin.com/in/birobirobiro/"><img
             class="icon" src="icons/linkedin.svg" />LinkedIn</a>
         <br />
 
