Adicionando Google AdSense

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 
     gtag("config", "G-M2GTM67Z2G");
   </script>
+
+  <!-- Google AdSense -->
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
