Chenge order buttons

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
+
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css" />
@@ -69,7 +69,7 @@
   <!-- Google AdSense -->
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -83,25 +83,25 @@
 
         <!-- Short Bio -->
         <div class="profile-description">
-            <div class="hello">
-              <img src="./.github/hello.gif" alt="Hello" />
-            </div>
-            <div class="description">
-              Me chamo <strong><i>João</i></strong>, mas pode me chamar de
-            <strong><i>Biro</i></strong>.
-            </div>
+          <div class="hello">
+            <img src="./.github/hello.gif" alt="Hello" />
           </div>
+          <div class="description">
+            Me chamo <strong><i>João</i></strong>, mas pode me chamar de
+            <strong><i>Biro</i></strong>.
+          </div>
+        </div>
 
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
-
-        <!-- Lofi -->
-        <a class="button button-lofi" target="_blank" href="https://lofi.co/?via=birobirobiro">
-          <img src="icons/lofi.png" /></a>
-        <br />
 
         <!-- DoWhile -->
         <a class="button button-dowhile-2021" target="_blank" href="https://dowhile.io/convite/birobirobiro">
           <img class="icon-do-while-2021" src="icons/dowhile.svg" /></a>
+        <br />
+
+        <!-- Lofi -->
+        <a class="button button-lofi" target="_blank" href="https://lofi.co/?via=birobirobiro">
+          <img src="icons/lofi.png" /></a>
         <br />
 
         <!-- Github -->
@@ -144,7 +144,7 @@
 
         <footer>
           <p>
-            Community Experience
+            Developer Instructor -
             <a target="_blank" href="https://rocketseat.com.br">@Rocketseat</a>
             🚀
           </p>
