Change link button

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
         <!-- DoWhile -->
-        <a class="button button-dowhile-2021" target="_blank" href="https://dowhile.io/convite/birobirobiro">
+        <a class="button button-dowhile-2021" target="_blank" href="https://rseat.in/4LMDFJcX5">
           <img class="icon-do-while-2021" src="icons/dowhile.svg" /></a>
         <br />
 
