--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
+         <!-- Setup -->
+         <a class="button button-setup" target="_blank" href="https://kit.co/birobirobiro/setup"><img
+          class="icon" src="icons/laptop.svg" />Setup</a>
+      <br />
+
         <!-- Instagram -->
         <a class="button button-instagram" target="_blank" href="https://www.instagram.com/birobirobiro/"><img
             class="icon" src="icons/instagram.svg" />Instagram</a>
@@ -125,9 +130,9 @@
         <br />
 
         <!-- Lofi -->
-        <a class="button button-lofi" target="_blank" href="https://lofi.co/?via=birobirobiro">
+        <!-- <a class="button button-lofi" target="_blank" href="https://lofi.co/?via=birobirobiro">
           <img src="icons/lofi.png" /></a>
-        <br />
+        <br /> -->
 
         <br />
         <!-- <p>Build your own by forking <a href="https://littlelink.io">LittleLink</a>.</p> -->
