Add button Wallpaper

--- a/index.html
+++ b/index.html
@@ -94,10 +94,16 @@
 
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
-         <!-- Setup -->
-         <a class="button button-setup" target="_blank" href="https://kit.co/birobirobiro/setup"><img
-          class="icon" src="icons/laptop.svg" />Setup</a>
-      <br />
+
+        <!-- Setup -->
+        <a class="button button-setup" target="_blank" href="https://kit.co/birobirobiro/setup"><img class="icon"
+            src="icons/laptop.svg" />Meu Setup</a>
+        <br />
+
+        <!-- Wallpaper -->
+        <a class="button button-wallpaper" target="_blank" href="https://wallhaven.cc/w/lm87rq"><img class="icon"
+            src="icons/wallpaper.svg" />Wallpaper</a>
+        <br />
 
         <!-- Instagram -->
         <a class="button button-instagram" target="_blank" href="https://www.instagram.com/birobirobiro/"><img
